style.css
/* Body */
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root {
    --shadow-color: 207deg 45% 54%;
    --shadow-low:
    0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
    0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.34),
    1px 2px 2.5px -2.5px hsl(var(--shadow-color) / 0.34);
    --shadow-medium:
      0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.36),
      0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.36),
      2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.36),
      5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.36);
}

html, body {
	background-color: #bae1ff;
	width: 100%;
	height: 100vh;
    font-family: 'Poppins', sans-serif;
}

.game-over {
    background-color: #C70039;
}

.game-won {
    background-color: #28A228;
}

/* Header */
.header {
	display: grid;
    grid-template-areas: 'title title title'
    'buttons buttons buttons';
}
.main-title {
	font-size: 40px;
    font-family: 'Carter One', cursive;
    color: #49a9f3;
    text-shadow: #272727 4px 3px;
    grid-area: title;
    text-align: center;
}

.scoreboard-title {
    font-size: 40px;
    font-family: 'Carter One', cursive;
    color: #f34949;
    text-shadow: #272727 4px 3px;
    grid-area: title;
    text-align: center;
}

.header-buttons {
    grid-area: buttons;
    display: flex;
    justify-content: center;
    padding: .25em;
    align-items: center;
}

/* Buttons and inputs */
.header-button {
    border-radius: 7.5px;
    padding: 10px;
    text-align: center;
    border: 1px solid #e4e1db;
    background-color: #f5f2eb;
    outline: none;
    margin: 0px 7.5px;
    transition: all 0.5s;
    display: flex;
    align-items: center;
}

.header-button:hover {
    border: 1px solid #b6b2ac;
    background-color: #eac97c;
    transform: scale(1.1);
}

.button {
    border-radius: 7.5px;
    padding: 7.5px;
    text-align: center;
    border: 1px solid #e4e1db;
    background-color: #f5f2eb;
    outline: none;
    box-shadow: var(--shadow-low);
    transition: all 0.5s;
    margin: 0.5em 0.1em;
}

.button:hover {
    border: 1px solid #b6b2ac;
    background-color: #eac97c;
    transform: scale(1.1);
}

.button.close {
    display: flex;
    position: relative;
    align-self: flex-end;
}

.text-input {
    padding: 7.5px;
    border-radius: 7.5px;
    border: 1px solid #e4e1db;
    background-color: #fdfbf7;
    outline: none;
    box-shadow: var(--shadow-low);
}

.dashes {
    font-size: 36px;
    letter-spacing: .1em;
    transition: all 0.5s;
}
/* Sections */
.main-section {
	display: flex;
	justify-content: center;
}

.middle-section {
	border-radius: 1em;
	background-color: #fffefc;
	max-width: 70vw;
    min-width: 50vw;
    box-shadow: var(--shadow-medium);
    margin-top: max(18px)
}

.hero-section {
	padding: 1.5em;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
    height: fit-content;
}
#reset-win, #reset-lose {
    background-color:  #bae1ff;
    font-size: 20px;
    padding: 0.5em 1em;
    border: none;
    border-radius: 7.5px;
    cursor: pointer;
    transition: all 0.5s;
}
#reset-win:hover {
    background-color: red;
}

#player-input {
    display: flex;
}
#player-inputfield, #player-name-placeholder {
    margin-left: 0.5em;
}
/* Main */
#top-div {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	padding: 1em;
    
}
#top-div, p {
	font-size: 20px;
}
#correct-letters, #guessed-letters {
	font-size: 20px;
}
#guessed-letters {
	color: rgb(218, 45, 45);
    font-weight: 700;
    margin: 1em 0 2em 0;
    height: 20px;
}

.gubben {
    display: flex;
}

/* Hide elements */
.hidden {
    visibility: hidden;
    display: none !important;
}

/* Overlay */
.overlay {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    background-color: rgba(0, 0, 0, .65);
    position: absolute;
    top: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
}

/* Modal */
.modal {
    width: 500px;
    background-color: #fffefc;
    border-radius: 15px;
    display: flex;
    justify-content: center;
    align-content: stretch;
    align-items: center;
    padding: 25px;
    flex-flow: row wrap;
    box-shadow: var(--shadow-low);
}



.modal > .button.close {
    margin-left: min(430px);
}

.modal > .profile {
    margin-left: .25em;
    margin-right: .25em;
}

.modal > .title {
    width: 60vw;
    padding-bottom: 34px;
    text-align: center;
}

.title-center {
    width: 35vw;
    text-align: center;
    height: 72px;
    margin-bottom: 1em;
}

.title-center > * {
    height: 16px;
}

.win-title {
    font-size: 36px;
    font-family: 'Carter One', cursive;
    color: #439143;
    text-shadow: #272727 4px 3px;
}

.lose-title {
    font-size: 36px;
    font-family: 'Carter One', cursive;
    color: #C70039;
    text-shadow: #272727 4px 3px;
}

#win-modal, #lose-modal {
    flex-flow: column wrap;
}
.svårighetsgrad {
    margin-bottom: 1em;
}

/* Mobile */
@media (orientation: portrait) {
    /* Sections */
    .center-section {
        width: 85vw;
    }

    #top-div {
        display: flex;
        flex-direction: column;
    }

    .header-buttons {
        display: flex;
        flex-wrap: wrap;
    }


    #hangman-picture {
        width: 50%;
        height: 50%;
        margin-left: auto;
        margin-right: auto;
    }
}

@media (max-width: 450px) {
    .main-section, .middle-section, .game-section {
        min-width: 90%;
    }

    .header-buttons {
        display: flex;
        justify-content: flex-start;
        gap: 0.5em;
    }

}

.error-message {
    height: 20px;
    font-size: 1em;
    margin-top: 0.5em;
    margin-left: 0.5em;
    color: #a6201e;
    font-weight: 600;
}

#svar {
    display: flex;
    flex-wrap: wrap;
}

.container-display-score {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.score-div {
    width: 100%;
    margin: 1em;
    font-size: 1em;
}

.player-result {
    margin: 0.5em;
}

